Added model to frontend

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-12">
           <button onclick="classify_image()" class="btn btn-primary" id="classify_btn" disabled>Classify image</button>
-          <p id="result" hidden></p>
+          <div id="result"></div>
         </div>
       </div>
     </div>
