--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,6 +8,8 @@
   <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/darkly/bootstrap.min.css"
+    integrity="sha384-nNK9n28pDUDDgIiIqZ/MiyO3F4/9vsMtReZK39klb/MtkZI3/LtjSjlmyVPS3KdN" crossorigin="anonymous">
   <link href="css/custom.css" rel="stylesheet" />
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -21,24 +23,31 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container mt-5">
     <div class="row justify-content-center" id="alerts"></div>
     <div class="row">
       <div class="col-12 mb-3">
-        <h1>Machine Learning II</h1>
+        <h1>Model Deployment & Maintenance</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusantium perferendis dolor. Minus enim quas
-          beatae, blanditiis
-          fugit cupiditate sequi consectetur, aliquam quibusdam doloribus reiciendis, minima aut similique fuga facere?
+          Die Studierenden verstehen den Prozess, ein Machine Learning Projekt als Anwendung
+          zur Verfügung zu stellen. Sie kennen unterschiedliche Möglichkeiten und Frameworks,
+          Modelle als Services zur Verfügung zu stellen und können Services selbst erstellen. Die
+          Studierenden kennen auch unterschiedliche Möglichkeiten, ein einfaches User Interface
+          für Machine Learning Anwendungen zu gestalten und mit den Services zu verknüpfen.
+          Im weiteren können die Studierenden Machine Learning Applikationen inklusive User
+          Interfaces, Services und Modell lokal auf ihrem Rechner oder in der Cloud deployen. Um
+          bestehenden Modelle zu verwenden, kennen die Studierenden Modell-Standards und
+          Möglichkeiten, Modelle zwischen verschiedenen Systemen auszutauschen. Für wichtige
+          Vorgänge kennen die Studierenden Möglichkeiten zur Automatisierung. Das Wissen ist
+          relevant für die Berufsfelder Machine Learning Engineer, MLOps Engineer, DevOps
+          Engineer und Data Scientist.
         </p>
       </div>
     </div>
 
     <div class="row">
       <div class="col-12 mb-3">
-        <h2>Image Classification</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laborum fuga eligendi vel, iure quo eum soluta
-          nulla ducimus.</p>
+        <h2>YOLOS Image Classification</h2>
       </div>
     </div>
   </div>
@@ -48,7 +57,6 @@
       <div class="col-12 mb-3">
         <label for="image" class="form-label">Select an Image</label>
         <input type="file" class="form-control" id="upload_image" name="file" onchange="preview_image()" />
-        <div id="imagePreview"></div>
       </div>
     </div>
 
@@ -56,10 +64,14 @@
       <div class="col-12 mb-3">
         <div class="btn-group">
           <button onclick="upload_image()" id="upload" class="btn btn-primary fix-width">Upload</button>
-          <button onclick="classify_image()" class="btn btn-primary fix-width" id="classify_btn" disabled>Classify
+          <button onclick="classify_image()" class="btn btn-secondary fix-width" id="classify_btn" disabled>Classify
             image</button>
         </div>
       </div>
+    </div>
+
+    <div class="row">
+      <div id="imagePreview" class=""></div>
     </div>
   </div>
 </body>
